--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html> 
     <head>
         <meta charset=”utf-8” />
-        <title> Geoffrey Woods: Third-Party API with Pixabay </title>
+        <title> Third-Party API with Pixabay </title>
         <link href="css/styles.css" rel="stylesheet" type="text/css"/>
         <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
